objects/tdc_cti__Call_Monitoring__c/tdc_cti__Call_Monitoring__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Call Monitoring</label>
</CustomObject>