objects/tdc_cti__Call_Monitoring__c/fields/tdc_cti__Call_Data__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_Data__c</fullName>
    <label>Call Data</label>
    <type>TextArea</type>
</CustomField>