objects/tdc_cti__Call_Monitoring__c/fields/tdc_cti__To__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__To__c</fullName>
    <label>To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>